--- a/.htaccess
+++ b/.htaccess
@@ -4,6 +4,11 @@ Options -Indexes
 Redirect /gs/index.html /index.html
 Redirect /fs/index.html /index.html
 Redirect /https://qpkendra.com/degree/notesmcqexam.html /index.html
+Redirect /gk-computer-awerness-govt-competitive-exams-pg-15.html /gs/gk-computer-awerness-govt-competitive-exams-pg-15.html
+
+
+
+
 
 /Custom 400 errors
 
